# ChatBot

./: .gitignore  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/api/endpoints/: chat.py  health.py
backend/src/config/: settings.py
backend/src/core/: embedding.py  ingest.py  llm_client.py  prompt.py  rag.py  retrieval.py
backend/src/schemas/: chat.py
docs/: api_spec.md  architecture.md
frontend/: Dockerfile  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/ChatWindow/: ChatWindow.tsx
frontend/src/components/InputBox/: InputBox.tsx
frontend/src/components/Message/: Message.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: apiClient.ts
